refund amount fix

--- a/agile-frontend/WebContent/flatfull/header.html
+++ b/agile-frontend/WebContent/flatfull/header.html
@@ -409,9 +409,9 @@
                   	out.println("</ul><ul class='nav navbar-nav pull-right' style='float:right!important;'><li class='nav-bar-search'> <form id='domainSearchForm' class=' navbar-search'  style='margin: 5px;'> <input id='domainSearchText' class='form-control pull-left' type='text' style='line-height: 17px;width:85%;'  data-provide='typeahead'    placeholder='Search'></input> <input id='domain-search-results' type='image' src='img/SearchIcon.png' class='searchbox pull-left m-xs p-t-xs' /><div class='clearfix'></div></form></li>");
                   	 out.println("<li class='pull-right'><div class='m-t-xs'><span class=' dropdown-toggle' data-toggle='dropdown' ><a style='background: transparent;border: 0px;'>");
                     if (!StringUtils.isEmpty(currentUserPrefs.pic))
-                        out.println("<img height='35' width='35' src='"+ domainUser.pic+ "' alt='...' class='pos-rlt pos-t-xs'></img>");
+                        out.println("<img height='35' width='35' style='border-radius: 50%;margin-left: 20px;' src='"+ domainUser.pic+ "' alt='...' class='pos-rlt pos-t-xs'></img>");
                     else
-                      out.println("<img height='35' width='35' src='img/gravatar.png'  alt='...'></img>");
+                      out.println("<img height='35' width='35' style='border-radius: 50%;margin-left: 20px;' src='img/gravatar.png'  alt='...'></img>");
                       out.println("</a></span><ul class='dropdown-menu m-t-sm' style='right: 0;left: auto;'><li><a href='#user-prefs' class='b-b p-r-none'><div class='pull-left text-ellipsis w-auto hidden-sm hidden-md' style='max-width:210px;clear: both;''><span class='hidden-sm hidden-md text-head-black'>"+SafeHtmlUtil.sanitize(domainUser.name)+"</span></div><span class='text-sm text-ellipsis block' style='clear: both;''> <b>"+user.getEmail()+"</b></span></a></li>");
                       out.println("<li><a href="+logoutURL+"><i class='icon-off'></i>Logout</a></li></ul></div></li>");
                     if(domainUser.adminPanelAccessScopes !=null && domainUser.adminPanelAccessScopes.contains(AdminPanelAccessScopes.ADD_USER))
