beta issues fixed

--- a/agile-frontend/WebContent/misc/emailbuilder/blocks/image.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/blocks/image.html
@@ -12,8 +12,8 @@
             <table width="640" class="main" cellspacing="0" cellpadding="0" border="0" align="center" style="background-color:#FFFFFF;" data-type="image">
                 <tbody>
                     <tr>
-                        <td align="center" style="padding:0px 0px 0px 0px;" class="image">
-                            <img class=""  border="0" align="one_image" style="display:block;max-width:520px" alt="" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/placeholder_350x150.png" tabindex="0" width="350" height="150">
+                        <td align="center" style="padding:10px 0px 10px 0px;" class="image">
+                            <img class=""  border="0" align="one_image" style="display:block;max-width:520px" alt="" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/placeholder_350x150.png" tabindex="0" width="350" height="150" data-maxwidth="640">
                         </td>
                     </tr>
                 </tbody>
