--- a/agile-frontend/WebContent/misc/emailbuilder/blocks/image-caption.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/blocks/image-caption.html
@@ -22,7 +22,7 @@
                                     </tr>
                                         <tr>
                                             <td align="center" class="image-caption-content image imageInColumn">
-                                            <img  border="0" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/placeholder_350x150.png" style="display: block;max-width: 264px" data-maxwidth="265" width="265" height="140" border="0" >
+                                            <img  border="0" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/placeholder_350x150.png" style="display: block;" data-maxwidth="265" width="265" height="140" border="0" >
                                             </td>
                                         </tr>
 
