--- a/agile-frontend/WebContent/flatfull/tpl/warning-account-cancel.html
+++ b/agile-frontend/WebContent/flatfull/tpl/warning-account-cancel.html
@@ -172,7 +172,8 @@
                               <a id="account_cancel_chat_btn" class="btn btn-md btn-default p-t-sm p-b-sm w-xx-half">Chat</a>
                             </div></div>
                       <div class="col-md-4 {{#check_plan_interval 'MONTHLY'}} col-md-3 {{else}}{{/check_plan_interval}}">
-                      <div id="downgrade_to_free_plan" class="wrapper">
+                      <div id="downgrade_to_free_plan" class="wrapper pos-rlt">
+                        <div id="free-downgrade-restrictions" class="pos-abs hide"></div>
                               <div class="bg-box m-r m-l" style="background-color: #f05050;">
                                 <i class="icon-arrow-down pos-rlt pos-t"></i>
                               </div>
@@ -245,3 +246,49 @@
     {{agile_lng_translate 'cancellation' 'advices'}} : {{advices}}
   {{/if}}
 </script>
+
+<script id="free-downgrade-restrictions-template" type="text/html">
+<div class="text-bold"><span class="p-r-xs">We see that you are using {{plan}} features, which we do not support in free plan</span><span class="free-downgrade-tooltip text-sm" data-toggle="tooltip" data-placement="bottom" data-original-title="
+  {{#if users}}
+    {{agile_lng_translate 'Plan-and-upgrade' 'Users'}} - {{users.count}}; 
+  {{/if}}
+  {{#if contacts}}
+    {{agile_lng_translate 'Plan-and-upgrade' 'Contacts'}} - {{contacts.count}}; 
+  {{/if}}
+  {{#if workflows}}
+    {{agile_lng_translate 'Plan-and-upgrade' 'Campaigns'}} - {{workflows.count}}; 
+  {{/if}}
+  {{#if webrules}}
+    {{agile_lng_translate 'Plan-and-upgrade' 'Webrules'}} - {{webrules.count}}; 
+  {{/if}}
+  {{#if triggers}}
+    {{agile_lng_translate 'Plan-and-upgrade' 'Triggers'}} - {{triggers.count}}; 
+  {{/if}}
+  {{#if widgets}}
+    {{agile_lng_translate 'Plan-and-upgrade' 'Widgets'}} - {{widgets.count}}; 
+  {{/if}}
+  {{#if nodes}}
+    {{agile_lng_translate 'Plan-and-upgrade' 'Nodes'}} - {{nodes.count}}; 
+  {{/if}}
+  {{#if emailAccounts}}
+    {{agile_lng_translate 'Plan-and-upgrade' 'EmailAccounts'}} - {{emailAccounts.count}}; 
+  {{/if}}
+  {{#if reports}}
+    {{agile_lng_translate 'Plan-and-upgrade' 'Reports'}} - {{reports.count}}; 
+  {{/if}}
+  {{#if tracks}}
+    {{agile_lng_translate 'Plan-and-upgrade' 'Tracks'}} - {{tracks.count}}; 
+  {{/if}}
+  {{#if smsGateway}}
+    {{agile_lng_translate 'Plan-and-upgrade' 'SmsGateway'}}; 
+  {{/if}}
+  {{#if ecommerceSync}}
+    {{agile_lng_translate 'Plan-and-upgrade' 'EcommerceSync'}}; 
+  {{/if}}
+  {{#if accountingSync}}
+    {{agile_lng_translate 'Plan-and-upgrade' 'AccountingSync'}}; 
+  {{/if}}
+"><i class="icon icon-question"></i></span></div>
+<div class="text-danger">Please adjust your current plan accordingly and proceed to downgrade.</div>
+</script>
+
