Verifying from email address

--- a/agile-frontend/WebContent/flatfull/tpl/workflow/workflow-alerts.html
+++ b/agile-frontend/WebContent/flatfull/tpl/workflow/workflow-alerts.html
@@ -110,7 +110,7 @@
 			<span class="m-r-xs"></span>
  			<button type="button" class="btn btn-danger" data-dismiss="modal" id="verify-ignore" style="display:none;">{{agile_lng_translate 'contacts-view' 'ignore'}}</button>
 			<a href="#" class="btn btn-sm btn-primary" id="verify-email-send">
-			{{agile_lng_translate 'email' 'send-verification-email-text'}}</a>
+			{{agile_lng_translate 'email' 'verify-email-text'}}</a>
 		</div>
 	</div>
 </div>
