--- a/agile-frontend/WebContent/flatfull/tpl/deal-search-results.html
+++ b/agile-frontend/WebContent/flatfull/tpl/deal-search-results.html
@@ -36,7 +36,21 @@
         </div>
     </td>
     <!-- <td><div class="text-ellipsis" style="width:10em">
-        {{#if expected_value}}{{currencySymbol}}{{numberWithCommas expected_value}}{{else}}-{{/if}}
+        {{#if_equals currency_conversion_value "0"}}
+                {{currencyType currency_type}}{{currency_conversion_value}}
+        {{else}}
+            {{#if currency_conversion_value}}
+                {{currencyType currency_type}}{{numberWithCommas currency_conversion_value}}
+            {{else}}
+                {{#if_equals expected_value "0"}}
+                    {{currencySymbol}}{{numberWithCommas expected_value}}
+                {{else}}
+                    {{#if expected_value}}
+                        {{currencySymbol}}{{expected_value}}
+                    {{else}}-{{/if}}
+                {{/if_equals}}
+            {{/if}}
+        {{/if_equals}}
         </div>
     </td> -->
     <!-- <td>
@@ -61,7 +75,21 @@
     </td>
    
     <td value="{{#if expected_value}}{{expected_value}}{{else}}0{{/if}}"><div class="text-ellipsis" style="width:10em">
-        {{#if expected_value}}{{currencySymbol}}{{numberWithCommas expected_value}}{{else}}-{{/if}}
+        {{#if_equals currency_conversion_value "0"}}
+                {{currencyType currency_type}}{{currency_conversion_value}}
+            {{else}}
+                {{#if currency_conversion_value}}
+                    {{currencyType currency_type}}{{numberWithCommas currency_conversion_value}}
+                {{else}}
+                    {{#if_equals expected_value "0"}}
+                        {{currencySymbol}}{{numberWithCommas expected_value}}
+                    {{else}}
+                        {{#if expected_value}}
+                            {{currencySymbol}}{{expected_value}}
+                        {{else}}-{{/if}}
+                    {{/if_equals}}
+                {{/if}}
+            {{/if_equals}}
         </div>
     </td>
     <td>
