--- a/agile-frontend/WebContent/flatfull/tpl/widget/widget-add.html
+++ b/agile-frontend/WebContent/flatfull/tpl/widget/widget-add.html
@@ -113,7 +113,14 @@
 			<span style="font-size: 12px;position: relative;top: 2px;">*</span>
 
 			<span style="font-size: 10px;">{{agile_lng_translate 'widjets' 'we-recommend-bria'}}</span>
+			{{else}}
+				{{#if_equals name "Asterisk"}}
+					<br/>
+					
 
+					<span style="font-size: 10px;">{{agile_lng_translate 'widgets' 'run-as-admin-in-windows'}}</span>
+
+				{{/if_equals}}
 		{{/if_equals}}
 	{{/if_equals}}
 	{{/if_equals}}
