text chnage in new blocks

--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp5.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp5.html
@@ -34,7 +34,7 @@
                            </div>
                            <div class="col-xs-9 half-gutter">
                               <div class="editContent">James Bond</div>
-                              <div class="editContent"><span>License to Drink Inc</span></div>
+                              <div class="editContent"><span>CEO at ABC Inc</span></div>
                            </div>
                         </div>
                      </div>
@@ -52,7 +52,7 @@
                            </div>
                            <div class="col-xs-9 half-gutter">
                                <div class="editContent">James Bond</div>
-                              <div class="editContent"><span>License to Drink Inc</span></div>
+                              <div class="editContent"><span>CEO at ABC Inc</span></div>
                            </div>
                         </div>
                      </div>
@@ -70,7 +70,7 @@
                            </div>
                            <div class="col-xs-9 half-gutter">
                                <div class="editContent">James Bond</div>
-                              <div class="editContent"><span>License to Drink Inc</span></div>
+                              <div class="editContent"><span>CEO at ABC Inc</span></div>
                            </div>
                         </div>
                      </div>
