--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp6.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp6.html
@@ -15,7 +15,7 @@
             <div class="container">               
                   <div class="row text-center">
                      <div class="editContent">
-                        <h1 style="margin: 0px 0px 15px 0px;">CloudSoft client testimonials</h1>
+                        <h1 style="margin: 0px 0px 15px 0px;">What our customer say ?</h1>
                      </div>
                      <div class="editContent" style="font-size: 14px; color: #8f96a9;">Omnis commodo consequat ei mea. Movet praesent postulant mea at, at nam dolorem  lucilius. Soleat interesset   mea cu, eum regione menandri definitionem no.
                      Movet praesent postulant mea at, at nam dolorem  lucilius.
@@ -29,9 +29,11 @@
                             <div class="editContent content"> “Omnis commodo consequat ei mea. Movet praesent postulant mea at, at nam dolorem lucilius. Soleat interesset mea cu, eum regione menandri definitionem no. Soleat interesset mea cu, eum regione no. Omnis commodo consequat ei at, at nam dolorem lucilius. Movet praesent postulant mea at, at nam dolorem lucilius.” </div>
                         </div>
                         <div class="client_area col-sm-12">
-                           <div class="client_image"><img src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp6img1.png" alt=""></div>
-                           <div class="editContent client_name">Ronnie Nicol</div>
-                           <div class="editContent client_data"><span>CloudSoft client</span></div>
+                           <div class="client_image col-sm-2"><img src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp6img1.png" alt=""></div>
+                           <div class="col-sm-9">
+                              <div class="col-sm-9 editContent client_name">James Deck</div>
+                              <div class="col-sm-9 editContent client_data"><span>CEO at ABC Inc</span></div>
+                           </div>
                         </div>
                      </div>
                      <!-- /End Testimonial Box --> 
@@ -42,9 +44,11 @@
                             <div class="editContent content"> “Omnis commodo consequat ei mea. Movet praesent postulant mea at, at nam dolorem lucilius. Soleat interesset mea cu, eum regione menandri definitionem no. Soleat interesset mea cu, eum regione no. Omnis commodo consequat ei at, at nam dolorem lucilius. Movet praesent postulant mea at, at nam dolorem lucilius.” </div>
                         </div>
                         <div class="client_area col-sm-12">
-                           <div class="client_image "><img src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp6img2.png" alt=""></div>
-                           <div class="editContent client_name">James Deck</div>
-                            <div class="editContent client_data"><span>CloudSoft client</span></div>
+                           <div class="client_image col-sm-2"><img src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp6img2.png" alt=""></div>
+                           <div class="col-sm-9">
+                              <div class="col-sm-9 editContent client_name">James Deck</div>
+                              <div class="col-sm-9 editContent client_data"><span>CEO at ABC Inc</span></div>
+                           </div>
                         </div>
                      </div>
                      <!-- /End Testimonial Box --> 
